<resources>
    <string name="app_name">Food Factory</string>
    <string name="tomato_vegg">Tomato Veggie</string>
    <string name="ghs_8_00">GHS 8.00</string>
    <string name="default_web_client">959759804888-r335pdnuqs6lhr2bige9tkaqqkk0vh1e.apps.googleusercontent.com</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_home">Home</string>
    <string name="let_s_dine_in_together">Let\'s dine in together.</string>
    <string name="sign_in">Sign In</string>
    <string name="food_factory">FOOD FACTORY</string>
    <string name="action_logout">SignOut</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="cash">Cash</string>
    <string name="total">Total</string>
    <string name="upi">UPI</string>
    <string name="payment">Payment</string>
    <string name="card">Card</string>
    <string name="payment_method">Payment Method</string>
    <string name="bill_breakup">Bill Breakup</string>
    <string name="sgst_2_5">SGST(2.5%)</string>
    <string name="cgst_2_5">CGST(2.5%)</string>
</resources>