<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/canvas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="176dp"
        android:fontFamily="@font/heading_name"
        android:text="@string/food_factory"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="360dp"
        android:layout_height="63dp"
        android:layout_marginTop="564dp"

        android:text="@string/let_s_dine_in_together"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/sign_in_button"
        android:layout_width="228dp"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/google_icon"

        android:insetLeft="4dp"
        android:insetTop="4dp"
        android:insetRight="4dp"
        android:insetBottom="4dp"
        android:text="@string/sign_in"
        android:textColor="#3E2723"
        android:textSize="18sp"
        app:icon="@drawable/google_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />




</androidx.constraintlayout.widget.ConstraintLayout>